force-app/main/default/objects/Doc_Template__c/Doc_Template__c.object-meta.xml
<CustomObject>
    <description>This is to define SFM Output Document template.</description>
    <label>Doc Template</label>
    <nameField>
        <displayFormat>{0000000000}</displayFormat>
        <label>Record Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Doc Templates</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>