force-app/main/default/objects/Doc_Template__c/fields/Detail_Object_Count__c.field-meta.xml
<CustomField>
    <fullName>Detail_Object_Count__c</fullName>
    <label>Detail Object Count</label>
    <summaryFilterItems>
        <field>Doc_Template_Details__c.Type__c</field>
        <operation>equals</operation>
        <value>Detail_Object</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Doc_Template_Details__c.Object_Name__c</field>
        <operation>notEqual</operation>
        <value/>
    </summaryFilterItems>
    <summaryForeignKey>Doc_Template_Details__c.Doc_Template__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>