force-app/main/default/objects/Doc_Template__c/fields/SM_Description__c.field-meta.xml
<CustomField>
    <fullName>SM_Description__c</fullName>
    <label>Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>