force-app/main/default/objects/Doc_Template__c/fields/Template_Id__c.field-meta.xml
<CustomField>
    <fullName>Template_Id__c</fullName>
    <label>Template Id</label>
    <length>50</length>
    <type>Text</type>
</CustomField>